fix: enforce the colgroup modes, and fill the gaps around the family
The class javadoc stated the specification rule — a <colgroup> either
carries a span and has no children, or has <col> children and no span —
but nothing enforced it, so setSpan followed by addColumn rendered
markup browsers resolve inconsistently. That is exactly the failure this
family exists to prevent, and it was the last invariant left unguarded.
addColumn now rejects a group carrying a span and setSpan rejects a
group with columns, with resetSpan and removeAllColumns as the way to
switch modes.

TableCaption was the only member of the family whose varargs constructor
had no List counterpart, and Table.addCaption(List) was the only List
overload without a test.

The three section TestBench elements were empty markers, so a
<tbody> reached through $(TableBodyElement.class) could not get at its
own rows and a multi-body table had no way to assert per-body content.
They share a TableSectionElement base carrying getRows, TableElement
gains getBodies, getHead and getFoot, and the browser test uses them.

The signal-binding tests move to TableCellBindTextTest, matching the
convention every other signal-bound component in the package follows,
which also lets TableCellTest drop SignalsUnitTest.